--- a/xtb/index.html
+++ b/xtb/index.html
@@ -4,11 +4,11 @@
 </head>
 
 <body>
-<h1>Josh Cates</h1>
+<h1>Welcome to Xottabich!</h1>
 
 
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Fri Aug 26 14:15:55 MDT 2011 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Thu Dec 22 09:05:37 MST 2011 <!-- hhmts end -->
 </body> </html>
